Home_Work_11.9/front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-dep
  namespace: ls4
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: web
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  selector:
    app: web
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: web
